@startuml Class_Part4_Keuangan
title Class Diagram — Bagian 4: Keuangan & Akuntansi
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #F3E8FF
  BorderColor #7E22CE
  ArrowColor #581C87
}

class Order {
  +id: String
  +nomorOrder: String
  +grandTotal: Decimal
  +statusPembayaran: StatusPembayaran
}

class User {
  +id: String
  +name: String
  +role: String
}

class PenerimaanBarang {
  +id: String
  +nomorFaktur: String
  +totalTagihan: Decimal
}

class Payment {
  +id: String
  +nominal: Decimal
  +metodePembayaran: MetodePembayaran
  +tanggal: DateTime
  +keterangan: String
  +deletedAt: DateTime
  --
  +processPayment(): void
  +generateJurnal(): void
}

class Akun {
  +id: String
  +kodeAkun: String
  +namaAkun: String
  +kelompok: String
  +posisiNormal: PosisiNormal
  +isActive: Boolean
  --
  +getSaldo(): Decimal
}

class JurnalUmum {
  +id: String
  +ref: String
  +tanggal: DateTime
  +namaBiaya: String
  +nominal: Decimal
  +deletedAt: DateTime
  --
  +createDoubleEntry(): void
}

class KasBank {
  +id: String
  +namaRekening: String
  +jenisRekening: String
  +nomorRekening: String
  +isActive: Boolean
}

' Relasi Pembayaran
Order           "1"    --> "0..*" Payment    : memiliki
User            "1"    --> "0..*" Payment    : mencatat
Payment         "1"    --> "1..*" JurnalUmum : menghasilkan
PenerimaanBarang "1"  --> "0..*" JurnalUmum : menghasilkan
User            "1"    --> "0..*" JurnalUmum : mencatat

' Relasi Jurnal ke Akun (double-entry)
JurnalUmum "0..*" --> "1" Akun : debet
JurnalUmum "0..*" --> "1" Akun : kredit

' Relasi KasBank
KasBank "0..*" --> "0..1" Akun : terhubung ke

@enduml
